# columns_ui

./: .artifactignore  .clang-format  .editorconfig  .flake8  .gitignore  .gitmodules  .mdformat.toml  .pre-commit-config.yaml  .prettierrc.json  .remarkrc.json  CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT  Directory.Build.props  README.md  appveyor.yml  build-config.toml  pyproject.toml  renovate.json  vcpkg-configuration.json  vcpkg.json
.github/: dependabot.yml
azure/: job-build.yml  pipeline.yml  step-build.yml
docs/: .readthedocs.yaml  README.md  pyproject.toml
docs/source/: conf.py  index.md  lexer.py  toc.md
docs/source/buttons-toolbar/: svg-support.md
docs/source/item-details/: title-formatting.md
docs/source/other/: artwork.md  cli-commands.md  image-formats.md  text-rendering.md  text-styling.md
docs/source/playlist-switcher/: drag-and-drop.md  title-formatting.md
docs/source/playlist-view/: alternative-selection-mode.md  global-variables.md  inline-editing.md  keyboard-shortcuts.md  style-script.md  title-formatting.md
docs/source/reference/: title-formatting-index.md
foo_ui_columns/: .clang-format  .clang-tidy  Directory.Build.props  RDa37988  artwork.cpp  artwork.h  artwork_decoder.cpp  artwork_decoder.h  artwork_helpers.cpp  artwork_helpers.h  artwork_reader.cpp  artwork_reader.h  artwork_resizer.cpp  artwork_resizer.h  audio_track_toolbar.cpp  button_items.cpp  button_items.h  buttons.cpp  buttons.h  buttons_button.cpp  buttons_button.h  buttons_button_image.cpp  buttons_button_image.h  buttons_command_picker.cpp  buttons_config.h  cache.cpp  (+333 more)
(+560 files in other folders)
