[tool.poetry]
name = "columns-ui-docs"
version = "0.1.0"
description = ""
authors = []
packages = [
  { include = "source/conf.py" }
]

[tool.poetry.dependencies]
python = "^3.12"
myst-parser = "^4.0.1"
sphinx = "^8.2.3"
takao = "^0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
