[project]
name = "docs"
version = "0.1.0"
description = ""
requires-python = ">=3.12"
dependencies = [
    "myst-parser>=4.0.1",
    "sphinx>=8.2.3",
    "takao>=0.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["source/conf.py"]
